fixed homepage alignment

--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,10 @@ header a:hover{
 
 /* Boxes */
 #boxes{
-  margin-top:20px;
+  margin-top:1%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
 }
 
 #boxes .box{
